          hierarchy declared a soft dependency on the package.
        - Apply 'automatically installed' penalty score to all versions of
          automatically installed packages, not only installed one.
        - Don't perform inner auto-removal before of main resolver cycles.
      - Resolvers/External:
        - Request: lowercased all fields.
    - Download:
      - Methods/Debdelta:
        - Suppress standard output from debpatch.
    - Config:
      - [API break] 'set_regular_var': renamed to 'set_scalar'.
      - [API break] 'set_list_var': renamed to 'set_list'.
      - [API break] 'var': replaced by new methods 'get_string', 'get_number'
        and 'get_bool'.
    - Core:
      - Moved INIT block out to 'cupt' front-end.
    - Cache:
      - BinaryVersion:
        - Fallback to 0 if the installed size is not defined. Thanks to
          Jean-Christophe Dubacq <jcdubacq1@free.fr>. (Closes: #560160)

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Thu, 03 Dec 2009 21:49:41 +0200

cupt (1.3.1) unstable; urgency=low

  * Cupt:
    - Config:
      - Added the option 'APT::Never-MarkAuto-Sections'.
      - Added the option family 'Aptitude::*'.
    - Cache:
      - 'verify_hash_sums': fixed the crash regression since 1.3.0. Thanks to
        Cyril Brulebois. (Closes: #557177)
    - Graph/TransitiveClosure:
      - Fixed calculating vertexes reachability for paths with length more
        than 2.
    - Worker:
      - While splitting heterogeneous actions, pay the first attention to
        action dependencies which are originated from 'Conflicts'. No longer
        pass '--force-conflicts' to dpkg. Thanks to James Vega.
        (Closes: #556650)
      - Mark the 'remove' subactions of upgrade/downgrade actions as fake.
      - Subsequently, don't try to "eat" some action dependencies anymore.
      - Don't merge unpack and configure subactions.
      - While splitting heterogeneous actions, ignore (after setting up